--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "main": "index.js",
   "scripts": {
+    "build": "scripts/build.sh",
     "lint": "eslint .",
     "test": "npm run lint"
   },
@@ -20,6 +21,9 @@
   },
   "homepage": "https://github.com/algolia/eslint-plugin-algolia",
   "devDependencies": {
+    "babel-eslint": "^5.0.0-beta2",
+    "babel-core": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
     "eslint": "^1.7.3",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-config-algolia": "^4.2.0",
