chore(build): stop committing dist/ but include it in the npm package

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint",
     "eslintplugin"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "scripts/build.sh",
     "lint": "eslint .",
