chore(release): .npminclude doesn't seem to work
See https://twitter.com/sindresorhus/status/320975746778681344

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "eslint",
     "eslintplugin"
   ],
+  "files": [
+    "dist/"
+  ],
   "main": "dist/index.js",
   "scripts": {
     "build": "scripts/build.sh",
