--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "./scripts/build.sh",
-    "lint": "eslint .",
+    "lint": "eslint index.js rules/",
     "release": "./scripts/release.sh",
     "test": "./scripts/test.sh"
   },
