--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "algolia"
+  "extends": "algolia",
+  "rules": {
+    "algolia/force-import-root": 2,
+    "algolia/no-require": 1,
+    "algolia/no-module-exports": 2
+  }
 }
