--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/algolia/eslint-plugin-algolia",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^5.0.0-beta2",
     "babel-preset-es2015": "^6.0.0",
