--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,4 @@
 {
   "extends": "algolia",
-  "rules": {
-    "algolia/force-import-root": 2,
-    "algolia/no-require": 1,
-    "algolia/no-module-exports": 2
-  }
+  "rules": {}
 }
