--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,17 @@
 {
   "extends": "algolia",
-  "rules": {}
+  "rules": {
+    "import/no-commonjs": "off"
+  },
+  "env": {
+    "es6": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "impliedStrict": true
+    }
+  }
 }
