--- a/package.json
+++ b/package.json
@@ -25,11 +25,20 @@
   },
   "homepage": "https://github.com/algolia/eslint-plugin-algolia",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-algolia": "^15.0.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-algolia": "^1.5.0",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "json": "^9.0.3"
+    "json": "^9.0.3",
+    "prettier": "^1.19.1"
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
