--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "eslintplugin"
   ],
   "files": [
-    "dist/"
+    "index.js",
+    "rules"
   ],
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "./scripts/build.sh",
     "lint": "eslint index.js rules/",
     "release": "./scripts/release.sh",
     "test": "./scripts/test.sh"
