--- a/package.json
+++ b/package.json
@@ -26,19 +26,25 @@
   "homepage": "https://github.com/algolia/eslint-plugin-algolia",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-algolia": "^15.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-algolia": "^1.5.0",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "json": "^9.0.3",
-    "prettier": "^1.19.1"
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-algolia": "^19.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-algolia": "^2.0.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsdoc": "36.0.8",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "json": "^11.0.0",
+    "prettier": "^2.3.2"
   },
   "engines": {
     "node": ">=10"
+  },
+  "renovate": {
+    "extends": [
+      "algolia"
+    ]
   }
 }
