--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "eslintplugin"
   ],
   "files": [
-    "dist/"
+    "rules/"
   ],
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "./scripts/build.sh",
     "lint": "eslint index.js rules/",
@@ -26,18 +26,17 @@
   "homepage": "https://github.com/algolia/eslint-plugin-algolia",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-algolia": "^19.0.2",
+    "eslint": "^8.7.0",
+    "eslint-config-algolia": "^20.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-algolia": "^2.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "36.0.8",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsdoc": "37.7.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.28.0",
     "json": "^11.0.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.5.1"
   },
   "engines": {
     "node": ">=10"
